2013-04-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Optimize the event graphs
	queries that appear in tactican and agent view

	* extensions/net_tools.php
	extensions/ssh_gateway.php
	extensions/vnc_view.php: Fixing the network extensions in
	extensions manager

2013-04-11 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/functions_flot.php,
	include/graphs/flot/pandora.flot.js,
	include/graphs/flot/excanvas.js: some fixes for to show the flots
	graphs in m$-IE9 and next versions.

2013-04-11  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_ui.php
	operation/users/user_edit.php
	general/header.php: Fix some visual aspects and
	missed skins option in user editor deleted in last
	commits

	* images/input_filter.png
	images/input_pdf.png: Add new images to buttons

	* images/skin: Move whole skins folder
	to enterprise version

2013-04-11 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/groups/group_list.php, include/functions_groups.php:
	optimize the access to the groups in systems with a huge groups.
	
	* include/functions_snmp_browser.php, include/functions_users.php:
	clean source code style.
	
	* pandoradb.sql: added key for the parent group.

2013-04-11  Sergio Martin <sergio.martin@artica.es>

	* operation/visual_console/render_view.php
	operation/reporting/reporting_viewer.php
	operation/reporting/graph_viewer.php
	godmode/reporting/visual_console_builder.php
	godmode/reporting/graph_builder.php
	godmode/reporting/reporting_builder.php: Redistribute
	the options of some sections to improve the usability

	* images/cross_undo.png
	images/load.png: Change some images

	* operation/agentes/stat_win.php: Fix the problem of 
	the height of module graphs form layer adding a scroll
	div

2013-04-10  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_ui.php
	include/functions_events.php
	include/graphs/functions_flot.php